--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -110,13 +110,14 @@ S3method("[[", "PCorpus")
 S3method("[[<-", "PCorpus")
 S3method("as.list", "PCorpus")
 S3method("content", "PCorpus")
+S3method("format", "PCorpus")
 S3method("inspect", "PCorpus")
 S3method("length", "PCorpus")
 S3method("meta", "PCorpus")
 S3method("meta<-", "PCorpus")
 S3method("names", "PCorpus")
 S3method("names<-", "PCorpus")
-S3method("print", "PCorpus")
+S3method("print", "PCorpus", .print_via_format)
 S3method("TermDocumentMatrix", "PCorpus")
 S3method("tm_filter", "PCorpus")
 S3method("tm_index", "PCorpus")
@@ -125,9 +126,11 @@ S3method("tm_map", "PCorpus")
 S3method("as.character", "PlainTextDocument")
 S3method("content", "PlainTextDocument")
 S3method("content<-", "PlainTextDocument")
+S3method("format", "PlainTextDocument")
+S3method("inspect", "PlainTextDocument")
 S3method("meta", "PlainTextDocument")
 S3method("meta<-", "PlainTextDocument")
-S3method("print", "PlainTextDocument")
+S3method("print", "PlainTextDocument", .print_via_format)
 S3method("removeNumbers", "PlainTextDocument")
 S3method("removePunctuation", "PlainTextDocument")
 S3method("removeWords", "PlainTextDocument")
@@ -169,13 +172,14 @@ S3method("as.list", "VCorpus")
 S3method("as.VCorpus", "VCorpus")
 S3method("c", "VCorpus")
 S3method("content", "VCorpus")
+S3method("format", "VCorpus")
 S3method("inspect", "VCorpus")
 S3method("length", "VCorpus")
 S3method("meta", "VCorpus")
 S3method("meta<-", "VCorpus")
 S3method("names", "VCorpus")
 S3method("names<-", "VCorpus")
-S3method("print", "VCorpus")
+S3method("print", "VCorpus", .print_via_format)
 S3method("TermDocumentMatrix", "VCorpus")
 S3method("tm_filter", "VCorpus")
 S3method("tm_index", "VCorpus")
@@ -189,9 +193,10 @@ S3method("getElem", "XMLSource")
 S3method("as.character", "XMLTextDocument")
 S3method("content", "XMLTextDocument")
 S3method("content<-", "XMLTextDocument")
+S3method("format", "XMLTextDocument")
 S3method("meta", "XMLTextDocument")
 S3method("meta<-", "XMLTextDocument")
-S3method("print", "XMLTextDocument")
+S3method("print", "XMLTextDocument", .print_via_format)
 
 S3method("close", "ZipSource")
 S3method("getElem", "ZipSource")
