--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     comment = "pdf_info.ps taken from GPL Ghostscript"))
 Depends: R (>= 3.1.0), NLP (>= 0.1-6.2)
 Imports: parallel, slam (>= 0.1-31), stats, tools, utils
-Suggests: filehash, Rcampdf, Rgraphviz, Rpoppler, SnowballC, tm.lexicon.GeneralInquirer, XML
+Suggests: filehash, methods, Rcampdf, Rgraphviz, Rpoppler, SnowballC, tm.lexicon.GeneralInquirer, XML
 SystemRequirements: Antiword (http://www.winfield.demon.nl/) for reading MS Word files,
   pdfinfo and pdftotext from Poppler (http://poppler.freedesktop.org/) for reading PDF
 Description: A framework for text mining applications within R.
