--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.6-2.2
-Date: 2016-07-13
+Date: 2016-07-16
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     email = "feinerer@logic.at"),
              person("Kurt", "Hornik", role = "aut"),
              person("Artifex Software, Inc.", role = c("ctb", "cph"),
                     comment = "pdf_info.ps taken from GPL Ghostscript"))
 Depends: R (>= 3.1.0), NLP (>= 0.1-6.2)
-Imports: parallel, slam (>= 0.1-31), stats, tools, utils, graphics
+Imports: Rcpp, parallel, slam (>= 0.1-31), stats, tools, utils, graphics
+LinkingTo: BH, Rcpp
 Suggests: filehash, methods, Rcampdf, Rgraphviz, Rpoppler, SnowballC, tm.lexicon.GeneralInquirer, XML
 SystemRequirements: Antiword (<http://www.winfield.demon.nl/>) for reading MS Word files,
   pdfinfo and pdftotext from Poppler (<http://poppler.freedesktop.org/>) for reading PDF
