--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,5 @@
 importFrom("NLP", "content", "content<-", "meta", "meta<-", "words")
+importFrom("Rcpp", "evalCpp")
 importFrom("parallel", "mclapply")
 importFrom("stats", "coef", "cor", "lm", "setNames")
 importFrom("utils", "download.file", "getS3method", "unzip")
