--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,8 +1,9 @@
 importFrom("NLP", "content", "content<-", "meta", "meta<-", "words")
 importFrom("Rcpp", "evalCpp")
+importFrom("graphics", "abline", "plot")
+importFrom("parallel", "mclapply")
 importFrom("stats", "coef", "cor", "lm", "setNames")
 importFrom("utils", "download.file", "getS3method", "unzip")
-importFrom("graphics", "abline", "plot")
 
 import(slam)
 
